@@ -30,6 +30,8 @@
 #ifndef GEANY_TEMPLATES_H
 #define GEANY_TEMPLATES_H 1
 
+#define GEANY_TEMPLATES_INDENT 3
+
 enum
 {
 	GEANY_TEMPLATE_GPL = 0,
