@@ -1,3 +1,10 @@
+2011-03-15  Colomban Wendling  <colomban(at)geany(dot)org>
+
+ * src/templates.c, src/templates.h:
+   Use the same indentation for all templates (part of FR#3193527; from
+   a patch by Matthew Brush, thanks).
+
+
 2011-03-12  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * data/filetype_extensions.conf:
